--- a/goorm-client-app/src/components/postComponents/PostingForm.css
+++ b/goorm-client-app/src/components/postComponents/PostingForm.css
@@ -9,12 +9,12 @@
   display: flex;
   flex-direction: column;
   border: 1px solid;
-  border-color: #8c8c8cae;
+  border-color: lightgray;
   border-radius: 5px;
   background-color: white;
   width: 100%;
   height : 100%;
-  margin : 10px;
+  
   padding: 10px;
   
   justify-content: flex-start;
@@ -29,7 +29,10 @@
   width: 400px;
   height: 50px;
 }
-
 #post-submit-btn {
   background-color: skyblue;
+}
+
+#post-submit-btn:hover {
+  opacity: 0.7;
 }
