Board validation 수정 및 Board.js 내의 PostingForm에서 사용하는 함수 위치 이동

--- a/goorm-client-app/src/components/postComponents/PostingForm.css
+++ b/goorm-client-app/src/components/postComponents/PostingForm.css
@@ -31,8 +31,20 @@
 }
 #post-submit-btn {
   background-color: skyblue;
+  border : 1px solid transparent;
+  border-radius: 5px;
+  height: 45px;
 }
 
 #post-submit-btn:hover {
   opacity: 0.7;
+}
+
+.input-group {
+  display: flex;
+
+}
+.input-group > div {
+  display: flex;
+  flex-direction: row;
 }
