--- a/goorm-client-app/src/components/postComponents/Post.css
+++ b/goorm-client-app/src/components/postComponents/Post.css
@@ -1,8 +1,11 @@
-/* Post.css */
-
 #post-container {
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  max-width: 1000px;
+}
+
+.card {
+  width: 100%;
 }
 
 .post-card {
