--- a/goorm-client-app/src/components/postComponents/PostingForm.css
+++ b/goorm-client-app/src/components/postComponents/PostingForm.css
@@ -28,8 +28,15 @@
 #post-writer-input {
   width: 400px;
   height: 50px;
+  margin-top: 20px;
 }
+
+#post-body-input {
+  margin-top: 20px;
+}
+
 #post-submit-btn {
+  margin-top: 20px;
   background-color: skyblue;
   border : 1px solid transparent;
   border-radius: 5px;
@@ -42,9 +49,16 @@
 
 .input-group {
   display: flex;
+  margin-bottom: 0px;
 
 }
 .input-group > div {
   display: flex;
   flex-direction: row;
+}
+
+.text-validation-error {
+  margin-left: 5px;
+  color: rgb(200, 0, 0);
+  height: fit-content;
 }
