--- a/goorm-client-app/src/routes/home/Home.css
+++ b/goorm-client-app/src/routes/home/Home.css
@@ -27,10 +27,11 @@
 .home-section-container > div {
   width: 30%;
   min-height: 300px;
-  border: 1px solid lightgray;
-  border-radius: 5px;
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 10px;
   margin: 0px 20px 0px 20px;
   padding: 10px;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .to-board-btn {
@@ -40,3 +41,8 @@
   border-radius: 10px;
   margin-bottom: 10px;
 }
+
+.link-item {
+  text-decoration: none;
+}
+
